--- a/about.html
+++ b/about.html
@@ -13,7 +13,10 @@
       crossorigin="anonymous"
     />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -28,20 +31,27 @@
   <body>
     <div class="m">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-              <a href="index.html" class="navbar-brand">CV</a>
-              <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarCollapse">
-                  <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link" href="about.html">About me</a>
-                    <a class="nav-link" href="resume.html">Resume</a>
-                    <a class="nav-link" href="hobbies.html">Hobbies</a>
-                  </div>
-              </div>
+        <div class="container-fluid">
+          <a href="index.html" class="navbar-brand">CV</a>
+          <button
+            type="button"
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="resume.html">Resume</a>
+              <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </div>
           </div>
+        </div>
       </nav>
     </div>
     <div class="container-fluid">
@@ -62,8 +72,7 @@
           </p>
         </div>
         <div class="col-xs-11 col-md-7" id="infob">
-          <h1 class="me">About me
-          </h1>
+          <h1 class="me">About me</h1>
           <div
             class="w3-content w3-text-grey"
             id="contact"
@@ -71,7 +80,9 @@
           >
             <div class="w3-section">
               <p>
-                <i class="fa fa-address-card fa-fw w3-xxlarge w3-margin-right"></i
+                <i
+                  class="fa fa-address-card fa-fw w3-xxlarge w3-margin-right"
+                ></i
                 >Full Name: Juan Andrés Santiago Vasquez
               </p>
               <p>
@@ -85,7 +96,9 @@
                 Experience: 1 year
               </p>
               <p>
-                <i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>
+                <i
+                  class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"
+                ></i>
                 Bogotá, COL
               </p>
               <p>
@@ -99,7 +112,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col" id="social">
           <div class="row">
             <a
@@ -146,7 +159,7 @@
         </div>
       </div>
     </div>
-    
+
     <footer class="bg-dark text-center text-lg-start" style="width: 100%">
       <!-- Copyright -->
       <div
@@ -154,8 +167,10 @@
         style="background-color: rgba(0, 0, 0, 0.2)"
       >
         © 2022 Copyright:
-        <a class="text-light" href="https://mdbootstrap.com/"
-          >MDBootstrap.com</a
+        <a
+          class="text-light"
+          href="https://juanandres44.github.io/Entrega1-WEB/index.html"
+          >juanandres44.github.io</a
         >
       </div>
       <!-- Copyright -->
