--- a/hobbies.html
+++ b/hobbies.html
@@ -136,8 +136,8 @@
       <!-- Copyright -->
         <div class="text-light text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2022 Copyright:
-         <a class="text-light" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-        </div>
+        <a class="text-light" href="https://juanandres44.github.io/Entrega1-WEB/index.html"
+        >juanandres44.github.io</a>
       <!-- Copyright -->
     </footer>
   </body>
