--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       crossorigin="anonymous"
     />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="style/stylesheet.css" />
@@ -22,20 +25,27 @@
   <body>
     <div class="m">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-              <a href="index.html" class="navbar-brand">CV</a>
-              <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarCollapse">
-                  <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link" href="about.html">About me</a>
-                    <a class="nav-link" href="resume.html">Resume</a>
-                    <a class="nav-link" href="hobbies.html">Hobbies</a>
-                  </div>
-              </div>
+        <div class="container-fluid">
+          <a href="index.html" class="navbar-brand">CV</a>
+          <button
+            type="button"
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="resume.html">Resume</a>
+              <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </div>
           </div>
+        </div>
       </nav>
     </div>
     <div class="hero-image">
