--- a/resume.html
+++ b/resume.html
@@ -176,8 +176,10 @@
         style="background-color: rgba(0, 0, 0, 0.2)"
       >
         © 2022 Copyright:
-        <a class="text-light" href="https://mdbootstrap.com/"
-          >MDBootstrap.com</a
+        <a
+          class="text-light"
+          href="https://juanandres44.github.io/Entrega1-WEB/index.html"
+          >juanandres44.github.io</a
         >
       </div>
       <!-- Copyright -->
