--- a/about.html
+++ b/about.html
@@ -74,21 +74,17 @@
         <div class="col-xs-11 col-md-7" id="infob">
           <h1 class="me">About me</h1>
           <div
-            class="w3-content w3-text-grey"
+            class="content"
             id="contact"
             style="margin-bottom: 64px"
           >
-            <div class="w3-section">
+            <div class="section">
               <p>
-                <i
-                  class="fa fa-address-card fa-fw w3-xxlarge w3-margin-right"
-                ></i
+                <i class="fa fa-address-card fa-fw w3-xxlarge w3-margin-right"></i
                 >Full Name: Juan Andrés Santiago Vasquez
               </p>
               <p>
-                <i
-                  class="fa fa-birthday-cake fa-fw w3-xxlarge w3-margin-right"
-                ></i>
+                <i class="fa fa-birthday-cake fa-fw w3-xxlarge w3-margin-right"></i>
                 Date of birth: 30/06/2000
               </p>
               <p>
@@ -96,9 +92,7 @@
                 Experience: 1 year
               </p>
               <p>
-                <i
-                  class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"
-                ></i>
+                <i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>
                 Bogotá, COL
               </p>
               <p>
@@ -106,7 +100,7 @@
                 Phone: +57 3142445785
               </p>
               <p>
-                <i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i>
+                <i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"></i>
                 Email: ja.santiago@uniandes.edu.co
               </p>
             </div>
