--- a/hobbies.html
+++ b/hobbies.html
@@ -78,8 +78,8 @@
           <h1>Hobbies <i class="fa fa-soccer-ball-o fa-fw"></i></h1>
           <ul class="a">
             <li>I love to play and watch football. Since I was 4 years old, I started playing it whether it was with the academy or with my friends. Usually I tend to watch my favorite teams and when I have the opportity, I'll go and discover new stadiums and watch the matches.  </li>
-            <li>I enjoy playing videogames with my friends or alone. Generally, I play sports games sucha as FIFA or F1 and also shooting games, like Call of Duty or Halo. </li>
-            <li>I have a soft spot for music but more specifically soundtracks from great movies. I regularly listen when I'm working or studying. One of my favorite composers is Hans Zimmer, which I want to show one of his pieces from the movie Pirates of the Caribbean.</li>
+            <li>I enjoy playing videogames with my friends or alone. Generally, I play sports games such as FIFA or F1 and also shooting games, like Call of Duty or Halo. </li>
+            <li>I have a soft spot for music but more specifically soundtracks from great movies. I regularly listen to them when I'm working or studying. One of my favorite composers is Hans Zimmer, which I want to show one of his pieces from the movie Pirates of the Caribbean.</li>
             <li>Photography has also become one of my passions. Whenever I travel, I like to take pictures of lanscpaes or monuments.</li>
           </ul>
         </div>  
